# bcomp-microcode

./: Cargo.toml  README.md  index.html  package-lock.json  package.json
_app/: version.json
_app/immutable/assets/: 2.51741ba4.css  _page.c9546981.css  bcomp_microcode_bg.3767e00f.wasm  bcomp_microcode_bg.a312d7b9.wasm
_app/immutable/chunks/: index.e1b34d23.js  singletons.5083d80f.js  singletons.93fdd3e5.js  singletons.c2b49685.js  stores.72cb339a.js  stores.805b0891.js  stores.eeb9f1a2.js
_app/immutable/entry/: app.0b668393.js  app.2e5688e1.js  app.8ca9db63.js  start.4e711d7d.js  start.9e84ae5d.js  start.a1ace060.js
_app/immutable/nodes/: 0.60c07fdd.js  1.2d7966f7.js  1.5eed7333.js  1.afe7ef69.js  2.28a5e106.js  2.b4a9f846.js  2.f4c894e6.js
src/: command.rs  control_signals.rs  lib.rs  main.rs  regexes.rs  table.rs  tests.rs
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/lib/: mc.svelte  utils.ts
web/src/routes/: +layout.svelte  +page.svelte
