[package]
name = "bcomp-microcode-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
concat-idents = "1.1.4"
const_format = "0.2.30"
duplicate = "1.0.0"
enum-primitive-derive = "0.2.2"
fancy-regex = "0.11.0"
fixedbitset = "0.4.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
num-traits = "0.2.15"
parse_int = "0.6.0"
paste = "1.0.12"
regex = "1.8.1"
num = "0.4"
num-derive = "0.3"

wasm-bindgen = "0.2.85"
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
num_enum = "0.6.1"
cfg-if = "1.0.0"
seq-macro = "0.3.3"
enumset = "1.1.2"
packed_struct = "0.10.1"
serde-wasm-bindgen = "0.5.0"
serde = "1.0.163"
